# MyYoloInference

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  design.drawio
examples/: CMakeLists.txt  test.h  test_binary_input.cpp  test_explicit.cpp  test_implicit.cpp  test_video.cpp
src/: CMakeLists.txt  definitions.h  global.h  inference.h  inferenceclassify.cpp  inferenceclassify.h  inferencedetect.cpp  inferencedetect.h  inferencefactory.cpp  inferencefactory.h  inferenceobb.cpp  inferenceobb.h  inferencepose.cpp  inferencepose.h  inferencesegment.cpp  inferencesegment.h  metadata.cpp  metadata.h  my-yolo-inference.cpp  my-yolo-inference.h  utils.cpp  utils.h
